tests/cases/standard-library/errors/vec/std-vec-implicit-zone-untracked.ari
fn main() -> i64 {
  var vec = std::vec::Vec<i64> {
    raw: std::vec::RawVec<i64> {
      data: 0u64 as ptr i64,
      len: 0,
      capacity: 0,
    },
    metadata: std::zone::metadata(0u64 as ptr u8),
  };

  vec.reserve(1);
  return 0;
}
